--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
   <header class="header">
     <img class='trybewarts-header-logo' src="images/trybewarts-header-logo.svg" alt="Logo">
+    <form class="trybewarts-login" action="">
+      <input class='email-input' name='email' type="email" placeholder="Email" />
+      <input class='password-input' name='password' type="password" placeholder="Senha" />
+      <button class='btn-login' type="submit" >Entrar</button>
+    </form>
   </header>
   <script src='script.js' ></script>
 </body>
