--- a/index.html
+++ b/index.html
@@ -11,12 +11,19 @@
   <header class="header">
     <img class='trybewarts-header-logo' src="images/trybewarts-header-logo.svg" alt="Logo">
     <h1 id='trybewarts-header-title' >Trybewarts</h1>
-    <form class="trybewarts-login" action="">
+    <form class="trybewarts-login" action="get">
       <input class='email-input' name='email' type="email" placeholder="Email" />
       <input class='password-input' name='password' type="password" placeholder="Senha" />
       <button class='btn-login' type="submit" >Entrar</button>
     </form>
   </header>
+
+  <main>
+    <form id='evaluation-form' action="get">
+
+    </form>
+  </main>
+
   <script src='script.js' ></script>
 </body>
 </html>
