--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
   <main>
     <form id='evaluation-form' action="get">
-
     </form>
+    <img id='trybewarts-forms-logo' src="images/trybewarts-colored.svg" alt="Logo colorida grande" />
   </main>
 
   <script src='script.js' ></script>
