--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
     <img class='trybewarts-header-logo' src="images/trybewarts-header-logo.svg" alt="Logo">
     <h1 id='trybewarts-header-title' >Trybewarts</h1>
     <form class="trybewarts-login" action="get">
-      <input class='email-input' name='email' type="email" placeholder="Email" />
-      <input class='password-input' name='password' type="password" placeholder="Senha" />
+      <input class='email-login-input' name='email' type="email" placeholder="Email" />
+      <input class='password-login-input' name='password' type="password" placeholder="Senha" />
       <button class='btn-login' type="submit" >Entrar</button>
     </form>
   </header>
 
   <main>
     <form id='evaluation-form' action="get">
+      <input id='input-name' placeholder='Nome' type="text">
+      <input id='input-lastname' placeholder='Sobrenome' type="text">
+      <input id='input-email' placeholder='Email' type="text">
     </form>
     <img id='trybewarts-forms-logo' src="images/trybewarts-colored.svg" alt="Logo colorida grande" />
   </main>
