--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
       <input id='input-name' placeholder='Nome' type="text">
       <input id='input-lastname' placeholder='Sobrenome' type="text">
       <input id='input-email' placeholder='Email' type="text">
+      <select id="house">
+        <option id="gitnoria-house" value="Gitnória" selected>Gitnória</option>
+        <option id='reactpuff-house' value="Reactpuff" >Reactpuff</option>
+        <option id="corvinode-house" value="Corvinode" >Corvinode</option>
+        <option id="pytherina-house" value="Pytherina" >Pytherina</option>
+      </select>
     </form>
     <img id='trybewarts-forms-logo' src="images/trybewarts-colored.svg" alt="Logo colorida grande" />
   </main>
