--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
   <main>
     <form id='evaluation-form' action="get">
-      <input id='input-name' placeholder='Nome' type="text">
-      <input id='input-lastname' placeholder='Sobrenome' type="text">
+      <div class='full-name-container'>
+        <input id='input-name' placeholder='Nome' type="text">
+        <input id='input-lastname' placeholder='Sobrenome' type="text">
+      </div>
       <input id='input-email' placeholder='Email' type="text">
       <select id="house">
         <option id="gitnoria-house" value="Gitnória" selected>Gitnória</option>
