--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
         <input id='input-name' placeholder='Nome' type="text">
         <input id='input-lastname' placeholder='Sobrenome' type="text">
       </div>
-      <input id='input-email' placeholder='Email' type="text">
-      <select id="house">
-        <option id="gitnoria-house" value="Gitnória" selected>Gitnória</option>
-        <option id='reactpuff-house' value="Reactpuff" >Reactpuff</option>
-        <option id="corvinode-house" value="Corvinode" >Corvinode</option>
-        <option id="pytherina-house" value="Pytherina" >Pytherina</option>
-      </select>
+      <div class='email-house-container' >
+        <input id='input-email' placeholder='Email' type="text">
+        <select id="house">
+          <option id="gitnoria-house" value="Gitnória" selected>Gitnória</option>
+          <option id='reactpuff-house' value="Reactpuff" >Reactpuff</option>
+          <option id="corvinode-house" value="Corvinode" >Corvinode</option>
+          <option id="pytherina-house" value="Pytherina" >Pytherina</option>
+        </select>
+      </div>
     </form>
     <img id='trybewarts-forms-logo' src="images/trybewarts-colored.svg" alt="Logo colorida grande" />
   </main>
