--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
           <option id="pytherina-house" value="Pytherina" >Pytherina</option>
         </select>
       </div>
+      <div class='family-input-container' >
+        <label id='label-family' for="">Qual sua família?</label>
+        <div>
+          <input id='radio-family-option-frontend' name='family' type='radio' value='Frontend' >
+          <label for="radio-family-option-frontend">Frontend</label>
+        </div>
+        <div>
+          <input id='radio-family-option-backend' name='family' type='radio' value='Backend' >
+          <label for="radio-family-option-backend">Backend</label>
+        </div>
+        <div>
+          <input id='radio-family-option-fullstack' name='family' type='radio' value='FullStack' >
+          <label for="radio-family-option-fullstack">FullStack</label>
+        </div>
+      </div>
     </form>
     <img id='trybewarts-forms-logo' src="images/trybewarts-colored.svg" alt="Logo colorida grande" />
   </main>
