--- a/index.html
+++ b/index.html
@@ -79,6 +79,50 @@
           <label for="checkbox-content-option-python">Python</label>
         </div>
       </div>
+      <!-- Formulário de avaliação  -->
+      <div class='rate-input-container' >
+        <label id='label-rate' for="">Como você avalia a Trybewarts?</label>
+        <div>
+          <input id='radio-rate-option-1' name='rate' type='radio' value='1' >
+          <label for="radio-rate-option-1">1</label>
+        </div>
+        <div>
+          <input id='radio-rate-option-2' name='rate' type='radio' value='2' >
+          <label for="radio-rate-option-2">2</label>
+        </div>
+        <div>
+          <input id='radio-rate-option-3' name='rate' type='radio' value='3' >
+          <label for="radio-rate-option-3">3</label>
+        </div>
+        <div>
+          <input id='radio-rate-option-4' name='rate' type='radio' value='4' >
+          <label for="radio-rate-option-4">4</label>
+        </div>
+        <div>
+          <input id='radio-rate-option-5' name='rate' type='radio' value='5' >
+          <label for="radio-rate-option-5">5</label>
+        </div>
+        <div>
+          <input id='radio-rate-option-6' name='rate' type='radio' value='6' >
+          <label for="radio-rate-option-6">6</label>
+        </div>
+        <div>
+          <input id='radio-rate-option-7' name='rate' type='radio' value='7' >
+          <label for="radio-rate-option-7">7</label>
+        </div>
+        <div>
+          <input id='radio-rate-option-8' name='rate' type='radio' value='8' >
+          <label for="radio-rate-option-8">8</label>
+        </div>
+        <div>
+          <input id='radio-rate-option-9' name='rate' type='radio' value='9' >
+          <label for="radio-rate-option-9">9</label>
+        </div>
+        <div>
+          <input id='radio-rate-option-10' name='rate' type='radio' value='10' >
+          <label for="radio-rate-option-10">10</label>
+        </div>
+      </div>
     </form>
     <img id='trybewarts-forms-logo' src="images/trybewarts-colored.svg" alt="Logo colorida grande" />
   </main>
