--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
           <label for="radio-rate-option-10">10</label>
         </div>
       </div>
+      <div>
+        <label class='textarea' for="">Deixe seu comentário:</label>
+        <textarea id="textarea" cols="70" rows="10" maxlength="500" ></textarea>
+      </div>
     </form>
     <img id='trybewarts-forms-logo' src="images/trybewarts-colored.svg" alt="Logo colorida grande" />
   </main>
