--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
         <label class='textarea' for="">Deixe seu comentário:</label>
         <textarea id="textarea" cols="70" rows="10" maxlength="500" ></textarea>
       </div>
+      <div>
+        <input id='agreement' type="checkbox">
+        <label id='label-infos' for="agreement">Você concorda com o uso das informações acima?</label>
+      </div>
     </form>
     <img id='trybewarts-forms-logo' src="images/trybewarts-colored.svg" alt="Logo colorida grande" />
   </main>
