--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
         <input id='agreement' type="checkbox">
         <label id='label-infos' for="agreement">Você concorda com o uso das informações acima?</label>
       </div>
+      <button id='submit-btn' type='submit'>Enviar</button>
     </form>
     <img id='trybewarts-forms-logo' src="images/trybewarts-colored.svg" alt="Logo colorida grande" />
   </main>
