--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
         <textarea id="textarea" cols="70" rows="10" maxlength="500" ></textarea>
       </div>
       <div>
-        <input id='agreement' type="checkbox">
+        <input id='agreement' type="checkbox" >
         <label id='label-infos' for="agreement">Você concorda com o uso das informações acima?</label>
       </div>
-      <button id='submit-btn' type='submit'>Enviar</button>
+      <button id='submit-btn' type='submit' disabled>Enviar</button>
     </form>
     <img id='trybewarts-forms-logo' src="images/trybewarts-colored.svg" alt="Logo colorida grande" />
   </main>
