--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
     </form>
     <img id='trybewarts-forms-logo' src="images/trybewarts-colored.svg" alt="Logo colorida grande" />
   </main>
+  <footer>
+    <p>Direitos reservados à Trybewarts©</p>
+  </footer>
 
   <script src='script.js' ></script>
 </body>
