--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
       <div>
         <label class='textarea' for="">Deixe seu comentário:</label>
         <textarea id="textarea" cols="70" rows="10" maxlength="500" ></textarea>
+        <p id="counter" >500</p>
       </div>
       <div>
         <input id='agreement' type="checkbox" >
