--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
       </div>
       <!-- input da escolha da  família -->
       <div class='family-input-container' >
-        <label id='label-family' for="">Qual sua família?</label>
+        <label id='label-family' >Qual sua família?</label>
         <div>
-          <input id='radio-family-option-frontend' name='family' type='radio' value='Frontend' >
+          <input id='radio-family-option-frontend' name='family' type='radio' value='Frontend'>
           <label for="radio-family-option-frontend">Frontend</label>
         </div>
         <div>
-          <input id='radio-family-option-backend' name='family' type='radio' value='Backend' >
+          <input id='radio-family-option-backend' name='family' type='radio' value='Backend'>
           <label for="radio-family-option-backend">Backend</label>
         </div>
         <div>
-          <input id='radio-family-option-fullstack' name='family' type='radio' value='FullStack' >
+          <input id='radio-family-option-fullstack' name='family' type='radio' value='FullStack'>
           <label for="radio-family-option-fullstack">FullStack</label>
         </div>
       </div>
@@ -55,27 +55,27 @@
       <div class='content-input-container' >
         <label id='label-content' for="">Qual conteúdo você está com mais vontade de aprender?</label>
         <div>
-          <input id='checkbox-content-option-hofs' name='content' type='checkbox' value='HoFs' >
+          <input id='checkbox-content-option-hofs' class="subject" name='content' type='checkbox' value='HoFs' >
           <label for="checkbox-content-option-hofs">HoFs</label>
         </div>
         <div>
-          <input id='checkbox-content-option-jest' name='content' type='checkbox' value='Jest' >
+          <input id='checkbox-content-option-jest' class="subject" name='content' type='checkbox' value='Jest' >
           <label for="checkbox-content-option-jest">Jest</label>
         </div>
         <div>
-          <input id='checkbox-content-option-promises' name='content' type='checkbox' value='Promises' >
+          <input id='checkbox-content-option-promises' class="subject" name='content' type='checkbox' value='Promises' >
           <label for="checkbox-content-option-promises">Promises</label>
         </div>
         <div>
-          <input id='checkbox-content-option-react' name='content' type='checkbox' value='React' >
+          <input id='checkbox-content-option-react' class="subject" name='content' type='checkbox' value='React' >
           <label for="checkbox-content-option-react">React</label>
         </div>
         <div>
-          <input id='checkbox-content-option-sql' name='content' type='checkbox' value='SQL' >
+          <input id='checkbox-content-option-sql' class="subject" name='content' type='checkbox' value='SQL' >
           <label for="checkbox-content-option-sql">SQL</label>
         </div>
         <div>
-          <input id='checkbox-content-option-python' name='content' type='checkbox' value='Python' >
+          <input id='checkbox-content-option-python' class="subject" name='content' type='checkbox' value='Python' >
           <label for="checkbox-content-option-python">Python</label>
         </div>
       </div>
