--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
           <label for="radio-rate-option-10">10</label>
         </div>
       </div>
-      <div>
+      <div class="textarea-container">
         <label class='textarea' for="">Deixe seu comentário:</label>
         <textarea id="textarea" cols="70" rows="10" maxlength="500" ></textarea>
         <p id="counter" >500</p>
       </div>
-      <div>
+      <div class='agreement-container'>
         <input id='agreement' type="checkbox" >
         <label id='label-infos' for="agreement">Você concorda com o uso das informações acima?</label>
       </div>
