projeto arrumado para colocar no meu repositório pessoal

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="header">
     <img class='trybewarts-header-logo' src="images/trybewarts-header-logo.svg" alt="Logo">
     <h1 id='trybewarts-header-title' >Trybewarts</h1>
-    <form class="trybewarts-login" action="get">
+    <form class="trybewarts-login" action="">
       <input class='email-login-input' name='email' type="email" placeholder="Email" />
       <input class='password-login-input' name='password' type="password" placeholder="Senha" />
       <button class='btn-login' type="submit" >Entrar</button>
